v11/docs/ModelsMonitoringRevocationMonitoringAlertResponse.md
# ModelsMonitoringRevocationMonitoringAlertResponse

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Subject** | Pointer to **NullableString** |  | [optional] 
**Message** | Pointer to **NullableString** |  | [optional] 
**Recipients** | Pointer to **[]string** |  | [optional] 

## Methods

### NewModelsMonitoringRevocationMonitoringAlertResponse

`func NewModelsMonitoringRevocationMonitoringAlertResponse() *ModelsMonitoringRevocationMonitoringAlertResponse`

NewModelsMonitoringRevocationMonitoringAlertResponse instantiates a new ModelsMonitoringRevocationMonitoringAlertResponse object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsMonitoringRevocationMonitoringAlertResponseWithDefaults

`func NewModelsMonitoringRevocationMonitoringAlertResponseWithDefaults() *ModelsMonitoringRevocationMonitoringAlertResponse`

NewModelsMonitoringRevocationMonitoringAlertResponseWithDefaults instantiates a new ModelsMonitoringRevocationMonitoringAlertResponse object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetSubject

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) GetSubject() string`

GetSubject returns the Subject field if non-nil, zero value otherwise.

### GetSubjectOk

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) GetSubjectOk() (*string, bool)`

GetSubjectOk returns a tuple with the Subject field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetSubject

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) SetSubject(v string)`

SetSubject sets Subject field to given value.

### HasSubject

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) HasSubject() bool`

HasSubject returns a boolean if a field has been set.

### SetSubjectNil

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) SetSubjectNil(b bool)`

 SetSubjectNil sets the value for Subject to be an explicit nil

### UnsetSubject
`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) UnsetSubject()`

UnsetSubject ensures that no value is present for Subject, not even an explicit nil
### GetMessage

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) GetMessage() string`

GetMessage returns the Message field if non-nil, zero value otherwise.

### GetMessageOk

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) GetMessageOk() (*string, bool)`

GetMessageOk returns a tuple with the Message field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetMessage

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) SetMessage(v string)`

SetMessage sets Message field to given value.

### HasMessage

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) HasMessage() bool`

HasMessage returns a boolean if a field has been set.

### SetMessageNil

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) SetMessageNil(b bool)`

 SetMessageNil sets the value for Message to be an explicit nil

### UnsetMessage
`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) UnsetMessage()`

UnsetMessage ensures that no value is present for Message, not even an explicit nil
### GetRecipients

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) GetRecipients() []string`

GetRecipients returns the Recipients field if non-nil, zero value otherwise.

### GetRecipientsOk

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) GetRecipientsOk() (*[]string, bool)`

GetRecipientsOk returns a tuple with the Recipients field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetRecipients

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) SetRecipients(v []string)`

SetRecipients sets Recipients field to given value.

### HasRecipients

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) HasRecipients() bool`

HasRecipients returns a boolean if a field has been set.

### SetRecipientsNil

`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) SetRecipientsNil(b bool)`

 SetRecipientsNil sets the value for Recipients to be an explicit nil

### UnsetRecipients
`func (o *ModelsMonitoringRevocationMonitoringAlertResponse) UnsetRecipients()`

UnsetRecipients ensures that no value is present for Recipients, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


